+modify tests using SpringBoot